<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAllVideoDownload"
        android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linear2"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/download" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:visibility="gone"
        android:id="@+id/fabAllDownloaded"
        android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linear2"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/ic_cloud_off_black_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:padding="15dp">

        <ImageView
            android:id="@+id/img_menu_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:onClick="share"
            android:src="@drawable/share"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


        <LinearLayout
            android:visibility="gone"
            android:onClick="notification"
            android:id="@+id/linearNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:gravity="center">
            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/cart_badge"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="changeLanguage"
            tools:ignore="TouchTargetSizeCheck">

            <ImageView
                android:id="@+id/img_menu_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/language" />

            <TextView
                android:id="@+id/text_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="EN"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_down_black_24dp" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/yogaPower_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:text="Yoga Power"
        android:textColor="#FFF"
        android:textSize="35sp" />


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear3"
        android:layout_below="@+id/linear1"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="4.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/linearlayoutYoga1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_view"
                    android:gravity="center"
                    android:onClick="yoga"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="5dp"
                        android:id="@+id/imgView1"
                        android:src="@drawable/circle_modiji"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp" />

                    <TextView
                        android:id="@+id/textaboutYogaday"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/part_a"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/linearlayoutYoga2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_view"
                    android:gravity="center"
                    android:onClick="yoga"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="5dp"
                        android:id="@+id/imgView2"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/textaboutYoga"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/part_b"
                        android:textColor="#fff"
                        android:textSize="16sp"  />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/linearlayoutYoga3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_view"
                    android:gravity="center"
                    android:onClick="yoga"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="5dp"
                        android:id="@+id/imgView3"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle_standing" />

                    <TextView
                        android:id="@+id/textYogaStanding"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/part_c"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/linearlayoutYoga4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_view"
                    android:gravity="center"
                    android:onClick="yoga"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="5dp"
                        android:id="@+id/imgView4"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle_seating" />

                    <TextView
                        android:id="@+id/textYogaSeating"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/part_d"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/linearlayoutYoga5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_view"
                    android:gravity="center"
                    android:onClick="yoga"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="5dp"
                        android:id="@+id/imgView5"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        app:civ_border_color="#000"
                        app:civ_border_width="1dp"
                        android:background="@drawable/circle_lying" />

                    <TextView
                        android:id="@+id/textYogaLying"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/part_e"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/linearlayoutYoga6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_view"
                    android:gravity="center"
                    android:onClick="yoga"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_margin="5dp"
                        android:id="@+id/imgView6"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle_meditation" />

                    <TextView
                        android:id="@+id/textYogaMeditation"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/part_f"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#C922223F">

        <TextView
            android:id="@+id/txt_marqueLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/marqueLine"
            android:textColor="#fff"
            android:textSize="22sp" />

    </LinearLayout>

</RelativeLayout>